@@ -28,4 +28,5 @@
 #cmakedefine HAVE_LIBREADLINE
 #cmakedefine HAVE_STRCASECMP
 #cmakedefine HAVE_SYSLOG
+#cmakedefine HAVE_LOCALTIME_R
 
